Swagger updated and Lesson model and controllers added
